@@ -9,7 +9,8 @@ version x.x.x
 
  Bugfixes
  * --editor option for Docs can take flags and options.
- * max_retries and retry_delay configuration options help combat 302 Redirect errors.
+ * max_retries and retry_delay configuration options help combat some server
+ errors.
 
 version 0.9.11
  Enhancements
